--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "gatsby-plugin-offline": "^2.2.0",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-plugin-typescript": "^2.1.0",
     "gatsby-source-contentful": "^2.1.1",
     "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-instagram": "^0.5.1",
     "gatsby-transformer-sharp": "^2.2.0",
+    "gatsby-transformer-sqip": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
