--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-processor-styled-components": "^1.8.0"
   },
   "keywords": [
     "gatsby"
