--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "clear": "rm -rf .cache && rm -rf public/static",
     "build": "gatsby build",
-    "develop": "yarn run clear && yarn run tailwind && gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
