--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
   ],
   "license": "MIT",
   "scripts": {
-    "clear": "rm -rf .cache && rm -rf public/static",
     "build": "gatsby build",
-    "develop": "yarn run clear && yarn run tailwind && gatsby develop",
+    "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
