--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "clear": "rm -rf .cache && rm -rf public/static",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write src/**/*.{js,jsx}",
